--- a/lectures-client/src/app/components/lecture-list/lecture-list.component.scss
+++ b/lectures-client/src/app/components/lecture-list/lecture-list.component.scss
@@ -1,14 +1,12 @@
-table{
+mat-table{
     width: 100%;
+    padding-left:100px;
 }
 
 .mat-header-cell {
     color: black;
     font-size: large;
-    background-color: blue;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;  
+    background-color: rgb(63, 63, 112);
 }
    
   .mat-cell {
@@ -17,7 +15,7 @@ table{
 }
 
 button{
-    margin-left: 100px;
+    margin-left: 300px;
 }
 
   .mat-row {
@@ -25,17 +23,21 @@ button{
   }
 
   .mat-cell {
-    padding: 20px 50px 20px 50px;
+    padding: 20px 0 20px 0;
     font-size: 14px;
-    min-height: 48px;
+    min-height: 100px;
+    min-width: 200px;
     text-align: center;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
-   }
+  }
   .mat-header-cell{
-    padding: 20px 50px 20px 50px;
+    padding: 20px 0 20px 0;
+    min-width: 200px;
     text-align: center;
+  }
+ 
+  .mat-form-field{
+    padding-top: 20px;
+    padding-left:100px;
   }
  
 
